NetBSD Problem Report #49019

From t.hash425@gmail.com  Fri Jul 18 20:58:34 2014
Return-Path: <t.hash425@gmail.com>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 309C6A5675
	for <gnats-bugs@gnats.netbsd.org>; Fri, 18 Jul 2014 20:58:34 +0000 (UTC)
Message-Id: <53C98A63.7040506@gmail.com>
Date: Sat, 19 Jul 2014 05:58:11 +0900
From: Takahiro HAYASHI <t.hash425@gmail.com>
To: gnats-bugs@gnats.NetBSD.org
Subject: RPI: interrupt storm when url0 is up

>Number:         49019
>Category:       port-evbarm
>Synopsis:       RPI: interrupt storm when url0 is up
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    skrll
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Jul 18 21:00:00 +0000 2014
>Closed-Date:    Sat Sep 06 13:11:12 +0000 2014
>Last-Modified:  Mon Sep 08 19:05:00 +0000 2014
>Originator:     Takahiro HAYASHI
>Release:        NetBSD 6.99.47
>Organization:
>Environment:
System: NetBSD raspi 6.99.47 NetBSD 6.99.47 (MYRPI) #13: Fri Jul 18 20:50:08 JST 2014  root@halt:/build/head/obj.evbarm/sys/arch/evbarm/compile/MYRPI evbarm
Architecture: earmhf
Machine: evbarm
>Description:
	I have noticed tty interaction gets slow and laggie when
	I turn up url0 plugged into Raspberry-Pi.
	"bcm2835 pic usb" intr rate shown by systat vm increases from
	about 8100 to more than 37000.
	It gets back to 8100 when ifconfig url0 down.

	This issue happens with kue and udav too, but does not w/ axe.
	url, kue, and udav are FS devices, axe is HS device.

>How-To-Repeat:
	Plug url, kue, or udav into RPI and ifconfig it up.
>Fix:
	Not known.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-evbarm-maintainer->skrll
Responsible-Changed-By: skrll@NetBSD.org
Responsible-Changed-When: Sat, 19 Jul 2014 07:27:59 +0000
Responsible-Changed-Why:
Take


From: David Holland <dholland-bugs@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-evbarm/49019: RPI: interrupt storm when url0 is up
Date: Sun, 20 Jul 2014 20:13:22 +0000

 On Fri, Jul 18, 2014 at 09:00:00PM +0000, Takahiro HAYASHI wrote:
  > >Description:
  > 	I have noticed tty interaction gets slow and laggie when
  > 	I turn up url0 plugged into Raspberry-Pi.
  > 	"bcm2835 pic usb" intr rate shown by systat vm increases from
  > 	about 8100 to more than 37000.
  > 	It gets back to 8100 when ifconfig url0 down.
  > 
  > 	This issue happens with kue and udav too, but does not w/ axe.
  > 	url, kue, and udav are FS devices, axe is HS device.
  > 
  > >How-To-Repeat:
  > 	Plug url, kue, or udav into RPI and ifconfig it up.

 Which usb controller is this?

 -- 
 David A. Holland
 dholland@netbsd.org

From: Nick Hudson <skrll@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: David Holland <dholland-bugs@netbsd.org>, gnats-admin@netbsd.org, 
 netbsd-bugs@netbsd.org, Takahiro HAYASHI <t.hash425@gmail.com>
Subject: Re: port-evbarm/49019: RPI: interrupt storm when url0 is up
Date: Sun, 20 Jul 2014 22:04:26 +0100

 On 07/20/14 21:15, David Holland wrote:
 > The following reply was made to PR port-evbarm/49019; it has been noted by GNATS.
 >
 > From: David Holland <dholland-bugs@netbsd.org>
 > To: gnats-bugs@NetBSD.org
 > Cc:
 > Subject: Re: port-evbarm/49019: RPI: interrupt storm when url0 is up
 > Date: Sun, 20 Jul 2014 20:13:22 +0000
 >
 >   On Fri, Jul 18, 2014 at 09:00:00PM +0000, Takahiro HAYASHI wrote:
 >    > >Description:
 >    > 	I have noticed tty interaction gets slow and laggie when
 >    > 	I turn up url0 plugged into Raspberry-Pi.
 >    > 	"bcm2835 pic usb" intr rate shown by systat vm increases from
 >    > 	about 8100 to more than 37000.
 >    > 	It gets back to 8100 when ifconfig url0 down.
 >    >
 >    > 	This issue happens with kue and udav too, but does not w/ axe.
 >    > 	url, kue, and udav are FS devices, axe is HS device.
 >    >
 >    > >How-To-Repeat:
 >    > 	Plug url, kue, or udav into RPI and ifconfig it up.
 >   
 >   Which usb controller is this?

 dwc2

 Nick

From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49019 CVS commit: src/sys/external/bsd/dwc2/dist
Date: Sat, 26 Jul 2014 09:18:53 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Sat Jul 26 09:18:53 UTC 2014

 Modified Files:
 	src/sys/external/bsd/dwc2/dist: dwc2_hcdintr.c

 Log Message:
 Recover from channel halt errors by using the 3 strikes xacterr rule.

 Adapted from the RaspberryPI linux driver.

 This allows the rum(4) I was sent to be somewhat usable. Need to
 investigate further what is causing the problem in the first place.

 Might help PR/49019 (RPI: interrupt storm when url0 is up)


 To generate a diff of this commit:
 cvs rdiff -u -r1.8 -r1.9 src/sys/external/bsd/dwc2/dist/dwc2_hcdintr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Takahiro HAYASHI <t.hash425@gmail.com>
To: gnats-bugs@NetBSD.org, port-evbarm-maintainer@netbsd.org
Cc: 
Subject: Re: port-evbarm/49019: RPI: interrupt storm when url0 is up
Date: Wed, 30 Jul 2014 02:37:17 +0900

 I found that same problem occurs when I connect uplcom
 (Prolific ucom) to RPI and do "cu -l ttyU0".
 usbdevs -dv reports it's full speed device.

 -- 
 t-hash

From: Nick Hudson <skrll@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: Takahiro HAYASHI <t.hash425@gmail.com>, gnats-admin@netbsd.org, 
 netbsd-bugs@netbsd.org
Subject: Re: port-evbarm/49019: RPI: interrupt storm when url0 is up
Date: Wed, 30 Jul 2014 06:49:25 +0100

 On 07/29/14 18:40, Takahiro HAYASHI wrote:
 > The following reply was made to PR port-evbarm/49019; it has been noted by GNATS.
 >
 > From: Takahiro HAYASHI <t.hash425@gmail.com>
 > To: gnats-bugs@NetBSD.org, port-evbarm-maintainer@netbsd.org
 > Cc:
 > Subject: Re: port-evbarm/49019: RPI: interrupt storm when url0 is up
 > Date: Wed, 30 Jul 2014 02:37:17 +0900
 >
 >   I found that same problem occurs when I connect uplcom
 >   (Prolific ucom) to RPI and do "cu -l ttyU0".
 >   usbdevs -dv reports it's full speed device.

 I can reproduce this now.

 Nick

From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49019 CVS commit: src/sys/external/bsd/dwc2/dist
Date: Wed, 3 Sep 2014 10:00:08 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Wed Sep  3 10:00:08 UTC 2014

 Modified Files:
 	src/sys/external/bsd/dwc2/dist: dwc2_hcd.c dwc2_hcd.h dwc2_hcdintr.c
 	    dwc2_hcdqueue.c

 Log Message:
 Adapt the NAK holdoff scheme for FS/LS devices from the Raspberry Pi
 Foundation driver.

 Should fix PR/49019 - RPI: interrupt storm when url0 is up


 To generate a diff of this commit:
 cvs rdiff -u -r1.13 -r1.14 src/sys/external/bsd/dwc2/dist/dwc2_hcd.c
 cvs rdiff -u -r1.8 -r1.9 src/sys/external/bsd/dwc2/dist/dwc2_hcd.h
 cvs rdiff -u -r1.9 -r1.10 src/sys/external/bsd/dwc2/dist/dwc2_hcdintr.c
 cvs rdiff -u -r1.10 -r1.11 src/sys/external/bsd/dwc2/dist/dwc2_hcdqueue.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Wed, 03 Sep 2014 12:16:30 +0000
State-Changed-Why:
Please test today's -current.


From: Takahiro HAYASHI <t.hash425@gmail.com>
To: gnats-bugs@NetBSD.org, skrll@NetBSD.org
Cc: 
Subject: Re: port-evbarm/49019 (RPI: interrupt storm when url0 is up)
Date: Thu, 04 Sep 2014 08:57:53 +0900

 On 09/03/14 21:16, skrll@NetBSD.org wrote:
 > Synopsis: RPI: interrupt storm when url0 is up
 >
 > State-Changed-From-To: open->feedback
 > State-Changed-By: skrll@NetBSD.org
 > State-Changed-When: Wed, 03 Sep 2014 12:16:30 +0000
 > State-Changed-Why:
 > Please test today's -current.

 Thanks for taking care of this problem.

 The USB interrupt rate is now ~10000 when
 devices are up or opened.
 ucom, kue, and udav(UDAV_NO_PHY) work fine.
 url cannot detect carrier (ifconfig show 'no carrier')
 and link LED blinks periodically (about 6.5 sec).


 -- 
 t-hash

From: Nick Hudson <skrll@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: Takahiro HAYASHI <t.hash425@gmail.com>, gnats-admin@netbsd.org, 
 netbsd-bugs@netbsd.org
Subject: Re: port-evbarm/49019 (RPI: interrupt storm when url0 is up)
Date: Thu, 04 Sep 2014 07:55:35 +0100

 On 09/04/14 01:00, Takahiro HAYASHI wrote:
 > The following reply was made to PR port-evbarm/49019; it has been noted by GNATS.
 >
 > From: Takahiro HAYASHI <t.hash425@gmail.com>
 > To: gnats-bugs@NetBSD.org, skrll@NetBSD.org
 > Cc:
 > Subject: Re: port-evbarm/49019 (RPI: interrupt storm when url0 is up)
 > Date: Thu, 04 Sep 2014 08:57:53 +0900
 >
 >   On 09/03/14 21:16, skrll@NetBSD.org wrote:
 >   > Synopsis: RPI: interrupt storm when url0 is up
 >   >
 >   > State-Changed-From-To: open->feedback
 >   > State-Changed-By: skrll@NetBSD.org
 >   > State-Changed-When: Wed, 03 Sep 2014 12:16:30 +0000
 >   > State-Changed-Why:
 >   > Please test today's -current.
 >   
 >   Thanks for taking care of this problem.
 >   
 >   The USB interrupt rate is now ~10000 when
 >   devices are up or opened.
 >   ucom, kue, and udav(UDAV_NO_PHY) work fine.

 Good news.
 >   url cannot detect carrier (ifconfig show 'no carrier')
 >   and link LED blinks periodically (about 6.5 sec).

 I guess url needs

   urlphy* at mii? phy ?                 # Realtek RTL8150L internal PHYs

 Perhaps all of your ethernet usb devices could do with other PHYs adding 
 to the RPI config file?

 >   
 >   
 >   --
 >   t-hash
 >   

 Nick

From: Takahiro HAYASHI <t.hash425@gmail.com>
To: Nick Hudson <skrll@netbsd.org>, gnats-bugs@NetBSD.org
Cc: netbsd-bugs@netbsd.org
Subject: Re: port-evbarm/49019 (RPI: interrupt storm when url0 is up)
Date: Thu, 04 Sep 2014 19:09:40 +0900

 On 09/04/14 15:55, Nick Hudson wrote:
 >>   url cannot detect carrier (ifconfig show 'no carrier')
 >>   and link LED blinks periodically (about 6.5 sec).
 >
 > I guess url needs
 >
 >   urlphy* at mii? phy ?                 # Realtek RTL8150L internal PHYs
 >
 > Perhaps all of your ethernet usb devices could do with other PHYs adding to the RPI config file?

 Bingo! My RPI kernel and generic kernel for RPI lack urlphy.
 url(4) now works fine by adding urlphy to the config file.
 Thank you.


 -- 
 t-hash

State-Changed-From-To: feedback->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Sat, 06 Sep 2014 13:11:12 +0000
State-Changed-Why:
Problem(s) fixed.


From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49019 CVS commit: [netbsd-7] src/sys/external/bsd/dwc2/dist
Date: Mon, 8 Sep 2014 19:03:37 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Mon Sep  8 19:03:37 UTC 2014

 Modified Files:
 	src/sys/external/bsd/dwc2/dist [netbsd-7]: dwc2_hcd.c dwc2_hcd.h
 	    dwc2_hcdintr.c dwc2_hcdqueue.c

 Log Message:
 Pull up following revision(s) (requested by skrll in ticket #75):
 	sys/external/bsd/dwc2/dist/dwc2_hcd.c: revision 1.14
 	sys/external/bsd/dwc2/dist/dwc2_hcdqueue.c: revision 1.11
 	sys/external/bsd/dwc2/dist/dwc2_hcdintr.c: revision 1.10
 	sys/external/bsd/dwc2/dist/dwc2_hcd.h: revision 1.9
 Adapt the NAK holdoff scheme for FS/LS devices from the Raspberry Pi
 Foundation driver.
 Should fix PR/49019 - RPI: interrupt storm when url0 is up


 To generate a diff of this commit:
 cvs rdiff -u -r1.13 -r1.13.2.1 src/sys/external/bsd/dwc2/dist/dwc2_hcd.c
 cvs rdiff -u -r1.8 -r1.8.8.1 src/sys/external/bsd/dwc2/dist/dwc2_hcd.h
 cvs rdiff -u -r1.9 -r1.9.2.1 src/sys/external/bsd/dwc2/dist/dwc2_hcdintr.c
 cvs rdiff -u -r1.10 -r1.10.2.1 src/sys/external/bsd/dwc2/dist/dwc2_hcdqueue.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.