Adapt the NAK holdoff scheme for FS/LS devices from the Raspberry Pi Foundation driver.

Should fix PR/49019 - RPI: interrupt storm when url0 is up